--- a/TODO
+++ b/TODO
@@ -30,3 +30,7 @@ Maps - Entitys, Scripts & AI
 
 Tools - Class, Abilities & Buff Creator
 
+Adam Sawert:
+Connection from account game character
+My profile with stats taken from the game
+Find a friend
